# usdt

./: .gitignore  Cargo.toml  README.md  common-build.rs  rust-toolchain.toml
.github/buildomat/: config.toml
.github/buildomat/jobs/: build-and-test.sh  check-compile-errors.sh  test-no-op-implementation.sh
.github/workflows/: rust.yml
docs/: tracing-tokio.md
dof/: Cargo.toml  build.rs
dof/src/: des.rs  dof.rs  dof_bindings.rs  dtrace.h  fmt.rs  lib.rs  main.rs  ser.rs
dtrace-parser/: Cargo.toml
dtrace-parser/src/: build.rs  dtrace.pest  lib.rs  parser.rs
dtrace-parser/src/parser/: asm.rs  empty.rs  mod.rs  staticlib.rs
dtrace-parser/test-data/: foo-decl.txt  foo-defn.txt  foo-impl.txt
dusty/: Cargo.toml
dusty/src/: main.rs
examples/: simple.rs
probe-test/: Cargo.toml  build.rs  test.d
probe-test-attr/: Cargo.toml
probe-test-attr/src/: main.rs
probe-test-build/: Cargo.toml  build.rs  test.d
probe-test-build/src/: main.rs
probe-test-macro/: Cargo.toml  build.rs  test.d
probe-test-macro/src/: main.rs
probe-test/src/: main.rs
src/: dtrace.rs  lib.rs
tests/: Cargo.toml
tests/argument-types/: Cargo.toml
tests/argument-types/src/: main.rs
tests/compile-errors/: Cargo.toml
tests/compile-errors/providers/: type-mismatch.d  unsupported-type.d
tests/compile-errors/src/: different-serializable-type.rs  different-serializable-type.stderr  lib.rs  no-closure.rs  no-closure.stderr  no-provider-file.rs  no-provider-file.stderr  relative-import.rs  relative-import.stderr  type-mismatch.rs  type-mismatch.stderr  unsupported-type.rs  unsupported-type.stderr  zero-arg-probe-type-check.rs  zero-arg-probe-type-check.stderr
tests/does-it-work/: Cargo.toml  build.rs  test.d
tests/does-it-work/src/: main.rs
tests/empty/: Cargo.toml  build.rs  provider.d
tests/empty/src/: main.rs
tests/fake-cmd/: Cargo.toml
tests/fake-cmd/src/: main.rs
tests/fake-lib/: Cargo.toml  build.rs
tests/fake-lib/src/: lib.rs
tests/modules/: Cargo.toml
tests/modules/src/: inner.rs  main.rs
tests/namespace-conflict/: Cargo.toml  build.rs  provider.d
tests/namespace-conflict/src/: main.rs  stuff.rs
tests/rename/: Cargo.toml
tests/rename-builder/: Cargo.toml  build.rs  test.d
tests/rename-builder/src/: main.rs
tests/rename/src/: main.rs
tests/test-json/: Cargo.toml
tests/test-json/src/: main.rs
tests/test-unique-id/: Cargo.toml
tests/test-unique-id/src/: main.rs
tests/usize/: Cargo.toml
tests/usize/src/: main.rs
tests/zero-arg-probe/: Cargo.toml  build.rs  test.d
tests/zero-arg-probe/src/: main.rs
usdt/: Cargo.toml
usdt-attr-macro/: Cargo.toml
usdt-attr-macro/src/: lib.rs
usdt-impl/: Cargo.toml  build.rs
usdt-impl/src/: asm.rs  common.rs  empty.rs  lib.rs  linker.rs  no-linker.rs  record.rs  stap3.rs  stapsdt.rs
usdt-impl/src/asm/: mac.rs  mod.rs  other.rs
usdt-impl/src/stapsdt/: args.rs
usdt-macro/: Cargo.toml  build.rs
usdt-macro/native/: .gitignore  Makefile  provider.d  usdt.c  usdt.h
usdt-macro/src/: dtrace.pest  dtrace.rs  lib.rs
usdt-tests-common/: Cargo.toml
usdt-tests-common/src/: lib.rs
usdt/examples/: provider.d  simple.rs
usdt/src/: lib.rs  main.rs
