[workspace]
members = [
	"dof",
	"dtrace-parser",
	"dusty",
	"probe-test-build",
	"probe-test-macro",
	"probe-test-attr",
	"tests/argument-types",
	"tests/compile-errors",
	"tests/does-it-work",
	"tests/empty",
	"tests/fake-cmd",
	"tests/fake-lib",
	"tests/test-json",
	"tests/test-unique-id",
	"tests/zero-arg-probe",
	"usdt",
	"usdt-attr-macro",
	"usdt-impl",
	"usdt-macro",
	"usdt-tests-common",
]
