[package]
name = "dof"
version = "0.1.5"
authors = ["Benjamin Naecker <ben@oxidecomputer.com>",
           "Adam H. Leventhal <ahl@oxidecomputer.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Tools to read and write the DTrace Object Format (DOF)"
repository = "https://github.com/oxidecomputer/usdt.git"

[dependencies]
goblin = { version = "0.6", optional = true, features = ["elf64", "mach64"] }
pretty-hex = { version = "0.3", optional = true }
thiserror = "1"
zerocopy = "0.6"

[features]
des = ["pretty-hex", "goblin"]
