[package]
name = "dof"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Tools to read and write the DTrace Object Format (DOF)"
repository = "https://github.com/oxidecomputer/usdt.git"

[dependencies]
goblin = { version = "0.6", optional = true, features = ["elf64", "mach64"] }
pretty-hex = { version = "0.3", optional = true }
thiserror = "1"
zerocopy = "0.6"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

[features]
des = ["pretty-hex", "goblin"]
