[package]
name = "dof"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "Tools to read and write the DTrace Object Format (DOF)"
repository = "https://github.com/oxidecomputer/usdt.git"

[dependencies]
goblin = { version = "0.9", optional = true, features = ["elf64", "mach64"] }
pretty-hex = { version = "0.4", optional = true }
thiserror = "1"
zerocopy = { version = "0.8.7", features = [ "derive" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

[features]
des = ["pretty-hex", "goblin"]
