[package]
name = "dtrace-parser"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Parse DTrace provider definitions into Rust"
repository = "https://github.com/oxidecomputer/usdt.git"

[dependencies]
pest = "2.7.15"
pest_derive = "2.7.15"
thiserror = "2.0.11"

[dev-dependencies]
rstest = "0.22.0"
