[package]
name = "dtrace-parser"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "Parse DTrace provider definitions into Rust"
repository = "https://github.com/oxidecomputer/usdt.git"

[dependencies]
pest = "2.8.4"
pest_derive = "2.8.3"
thiserror = "2.0.17"

[dev-dependencies]
rstest = "0.26.1"
