[package]
name = "dtrace-parser"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "Parse DTrace provider definitions into Rust"
repository = "https://github.com/oxidecomputer/usdt.git"

[dependencies]
pest = "2.8.5"
pest_derive = "2.8.5"
thiserror = "2.0.18"

[dev-dependencies]
rstest = "0.26.1"
