[package]
name = "dusty"
version = "0.1.0"
authors = ["Benjamin Naecker <ben@oxidecomputer.com>"]
edition = "2018"
description = "Tool to inspect USDT probe records in object files"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
dof = { path = "../dof", features = [ "des" ] }
goblin = { version = "0.6", features = [ "elf32", "elf64" ] }
memmap = "0.7"
usdt-impl = { path = "../usdt-impl", features = ["des"] }
