[package]
name = "dusty"
version = "0.2.0"
edition = "2021"
description = "Tool to inspect USDT probe records in object files"
license = "Apache-2.0"
rust-version = "1.70.0"
publish = false

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
dof = { path = "../dof", features = ["des"] }
usdt = { path = "../usdt", features = ["asm"] }
usdt-impl = { path = "../usdt-impl", features = ["des"] }
