[package]
name = "probe-test-build"
version = "0.1.0"
authors = ["Benjamin Naecker <ben@oxidecomputer.com>",
           "Adam H. Leventhal <ahl@oxidecomputer.com>"]
edition = "2018"

[dependencies]
usdt = { path = "../usdt", default-features = false }

[build-dependencies]
usdt = { path = "../usdt" }

[features]
default = ["asm"]
asm = ["usdt/asm"]
