[package]
name = "usdt-attr-macro"
version = "0.3.3"
authors = ["Benjamin Naecker <ben@oxide.computer>"]
edition = "2018"
license = "Apache-2.0"
description = "Procedural macro for generating Rust macros for USDT probes"
repository = "https://github.com/oxidecomputer/usdt.git"

[lib]
proc-macro = true

[dependencies]
dtrace-parser = { path = "../dtrace-parser" }
proc-macro2 = "1"
serde_tokenstream = "0.1"
syn = { version = "1", features = ["full"] }
quote = "1"
usdt-impl = { path = "../usdt-impl", default-features = false }

[features]
default = ["asm"]
asm = ["usdt-impl/asm"]

[dev-dependencies]
rstest = "0.11"
