[package]
name = "usdt-impl"
version = "0.1.8"
authors = ["Benjamin Naecker <ben@oxidecomputer.com>",
           "Adam H. Leventhal <ahl@oxidecomputer.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Main implementation crate for the USDT package"
repository = "https://github.com/oxidecomputer/usdt.git"

[dependencies]
byteorder = "1.4.2"
dof = { path = "../dof", version = "0.1.5" }
dtrace-parser = { path = "../dtrace-parser", version = "0.1.9" }
goblin = { version = "0.3.4", features = [ "elf32", "elf64" ], optional = true }
libc = "0.2.88"
proc-macro2 = "1.0.24"
quote = "1.0.9"
serde = { version = "1.0.124", features = ["derive"] }
syn = { version = "1.0.60", features = ["full"] }
thiserror = "1.0.24"

[features]
asm = []
no-linker = ["asm"]
des = ["goblin", "dof/des"]
