[package]
name = "usdt-impl"
version = "0.1.13"
authors = ["Benjamin Naecker <ben@oxidecomputer.com>",
           "Adam H. Leventhal <ahl@oxidecomputer.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Main implementation crate for the USDT package"
repository = "https://github.com/oxidecomputer/usdt.git"

[dependencies]
byteorder = "1"
dtrace-parser = { path = "../dtrace-parser", version = "0.1.11" }
goblin = { version = "0.4", features = [ "elf32", "elf64" ], optional = true }
libc = "0.2"
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
thiserror = "1"
thread-id = "4"

[target.'cfg(target_os = "macos")'.dependencies]
dof = { path = "../dof", version = "0.1.5", optional = true, default-features = false }

[target.'cfg(not(target_os = "macos"))'.dependencies]
dof = { path = "../dof", version = "0.1.5", default-features = false }

[features]
asm = []
des = ["goblin", "dof", "dof/des"]
default = ["asm"]
