[package]
name = "usdt-impl"
version = "0.3.3"
authors = ["Benjamin Naecker <ben@oxidecomputer.com>",
           "Adam H. Leventhal <ahl@oxidecomputer.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Main implementation crate for the USDT package"
repository = "https://github.com/oxidecomputer/usdt.git"

[dependencies]
byteorder = "1"
dtrace-parser = { path = "../dtrace-parser" }
libc = "0.2"
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
thiserror = "1"
thread-id = "4"

[build-dependencies]
version_check = "0.9.4"

[target.'cfg(target_os = "macos")'.dependencies]
dof = { path = "../dof", optional = true, default-features = false }

[target.'cfg(not(target_os = "macos"))'.dependencies]
dof = { path = "../dof", default-features = false }

[features]
default = ["asm"]
asm = []
# The `des` feature enables `dof` and company to be able to deserialize special
# sections emitted in the binary which describe the probes.  Except on
# platforms with linker integration for USDT probes (currently only MacOS),
# that data is required in order to register the probes with the kernel.
des = ["dof", "dof/des"]
