[package]
name = "usdt-macro"
version = "0.3.4"
authors = ["Benjamin Naecker <ben@oxidecomputer.com>",
           "Adam H. Leventhal <ahl@oxidecomputer.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Procedural macro for generating Rust macros for USDT probes"
repository = "https://github.com/oxidecomputer/usdt.git"

[dependencies]
dtrace-parser = { path = "../dtrace-parser", version = "= 0.1.14" }
proc-macro2 = "1"
serde_tokenstream = "0.1"
syn = { version = "1", features = ["full"] }
quote = "1"
usdt-impl = { path = "../usdt-impl", default-features = false, version = "= 0.3.4" }

[features]
default = ["asm"]
asm = ["usdt-impl/asm"]

[lib]
proc-macro = true
