[package]
name = "usdt"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
description = "Dust your Rust with USDT probes"
repository = "https://github.com/oxidecomputer/usdt.git"
rust-version = "1.63.0"

# NOTE: The use of path and version dependencies is deliberate and load-bearing.
#
# When building from source, this will select the version in the workspace, by
# path. When publishing the specific version will be used. Combined with the
# exact version requirements, this prevents issues like oxidecomputer/usdt#69,
# where the public-facing `usdt` crate may pick up different versions of the
# internal implementation crates.
[dependencies]
dtrace-parser = { path = "../dtrace-parser", optional = true, version = "=0.2.0" }
serde = "1"
usdt-impl = { path = "../usdt-impl", default-features = false, version = "=0.5.0", features = [
  "des",
] }
usdt-macro = { path = "../usdt-macro", default-features = false, version = "=0.5.0" }
usdt-attr-macro = { path = "../usdt-attr-macro", default-features = false, version = "=0.5.0" }
dof = { path = "../dof", features = ["des"], version = "=0.3.0" }
goblin = { version = "0.8", features = ["elf32", "elf64"] }
memmap = { version = "0.7" }

[features]
default = ["asm"]
asm = [
  "usdt-impl/asm",
  "usdt-macro/asm",
  "usdt-attr-macro/asm",
  "dtrace-parser",
]
