[package]
name = "does-it-work"
version = "0.1.0"
authors = ["Benjamin Naecker <ben@oxidecomputer.com>",
           "Adam H. Leventhal <ahl@oxidecomputer.com>"]
edition = "2021"

[dependencies]
usdt = { path = "../../usdt" }
usdt-tests-common = { path = "../../usdt-tests-common" }

[build-dependencies]
usdt = { path = "../../usdt" }
version_check = "0.9.4"
