[package]
name = "empty"
version = "0.1.0"
authors = ["Benjamin Naecker <ben@oxidecomputer.com>",
           "Adam H. Leventhal <ahl@oxidecomputer.com>"]
edition = "2021"

[dependencies.usdt]
path = "../../usdt"
default-features = false

[build-dependencies.usdt]
path = "../../usdt"
default-features = false

[build-dependencies]
version_check = "0.9.4"

[features]
default = ["asm"]
asm = ["usdt/asm"]
