[package]
name = "fake-lib"
version = "0.1.0"
authors = ["Benjamin Naecker <ben@oxidecomputer.com>",
           "Adam H. Leventhal <ahl@oxidecomputer.com>"]
edition = "2018"

[dependencies]
usdt = { path = "../../usdt", features = ["asm"] }

[build-dependencies]
usdt = { path = "../../usdt", features = ["asm"] }
