[package]
name = "test-json"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
usdt = { path = "../../usdt" }
usdt-tests-common = { path = "../../usdt-tests-common" }
serde = "*"
serde_json = "*"

[build-dependencies]
version_check = "0.9.4"

[dev-dependencies]
tokio = { version = "1.39.2", features = [ "full" ] }
