[package]
name = "zero-arg-probe"
version = "0.1.0"
authors = ["Benjamin Naecker <ben@oxidecomputer.com>",
           "Adam H. Leventhal <ahl@oxidecomputer.com>"]
edition = "2018"

[dependencies]
usdt = { path = "../../usdt" }

[build-dependencies]
usdt = { path = "../../usdt" }
version_check = "0.9.4"
